partial solution to 04 flex exercise - fixme: flex-wrap

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,28 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  padding: 32px;
+}
+
+.plants {
+  display: flex;
+  justify-items: center;
+  gap: 52px;
+
+}
+
+.barberry, .chili, .pepper, .saffron {
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: 200px;
+  justify-content: center;
+}
+
+.text {
+  text-align: center;
+  flex-wrap: wrap;
 }
 
 /* do not edit this footer */
